--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
   "outputDirectory": "dist",
   "rewrites": [
     {
+      "source": "/api/songs/([^/]+)",
+      "destination": "/api/songs/[id].js?id=$1"
+    },
+    {
       "source": "/api/(.*)",
       "destination": "/api/$1"
     },
