--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.939.0",
     "@aws-sdk/client-s3": "^3.939.0",
+    "@aws-sdk/lib-dynamodb": "^3.939.0",
     "@octokit/rest": "^19.0.13",
+    "amazon-cognito-identity-js": "^6.3.16",
     "chordsheetjs": "^12.3.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.2"
