--- a/package.json
+++ b/package.json
@@ -10,29 +10,45 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:unit": "vitest --run src/",
+    "test:api": "vitest --run api/",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.939.0",
     "@aws-sdk/client-s3": "^3.939.0",
     "@aws-sdk/lib-dynamodb": "^3.939.0",
     "@octokit/rest": "^19.0.13",
-    "amazon-cognito-identity-js": "^6.3.16",
     "chordsheetjs": "^12.3.1",
+    "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
-    "jwks-rsa": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.0"
+    "jsdom": "^27.4.0",
+    "msw": "^2.12.7",
+    "playwright": "^1.57.0",
+    "vite": "^5.1.0",
+    "vitest": "^4.0.16"
   }
 }
