fix: update AWS region variable and error messages in seed-admin script
- Changed AWS region variable from process.env.AWS_REGION to process.env.VITE_AWS_REGION for consistency with VITE environment variables.
- Updated error messages to reflect the correct VITE environment variable names for admin email and password.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "22.x"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "killport 5173 && vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
