--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "22.x"
   },
   "scripts": {
-    "dev": "killport 5173 && vite",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
