--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "@vitest/coverage-v8": "^4.0.16",
     "@vitest/ui": "^4.0.16",
+    "autoprefixer": "^10.4.24",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -48,6 +49,8 @@
     "jsdom": "^27.4.0",
     "msw": "^2.12.7",
     "playwright": "^1.57.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "vite": "^5.1.0",
     "vitest": "^4.0.16"
   }
